--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@ font-family: 'Poppins', sans-serif; */
 .Head_top{
     display: flex;
     width: 90%;
-    background-color: yellow;
     justify-content: space-between;
     margin-top: 30px;
 }
@@ -39,7 +38,6 @@ font-family: 'Poppins', sans-serif; */
 .Head_wrap{
     width: 480px;
     height: 250px;
-    background-color: violet;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -58,10 +56,11 @@ font-family: 'Poppins', sans-serif; */
     height: 40px;
     border-radius: 50px;
     background-color: white;
+    font-family: 'Open Sans', sans-serif;
+    cursor: pointer;
 }
 
 .Head_bottom{
-    background-color: aqua;
     width: 90%;
     display: flex;
     justify-content: space-between;
@@ -70,8 +69,10 @@ font-family: 'Poppins', sans-serif; */
     padding-bottom: 70px;
 }
 
-@media screen and (max-width:600px){
-     
+.Mockup> img{
+    width: 600px;
+    height: 400px;
+    margin-top: 40px;
 }
 
 .btn2{
@@ -84,116 +85,28 @@ font-family: 'Poppins', sans-serif; */
     font-weight: 500;
 }
 
-/* .Mockup{
-    background-color: blue;
-    width: 600px;
-    height: 400px;
-} */
-
-.Mockup> img{
-    width: 600px;
-    height: 400px;
-}
-
-/* @media screen and (max-width:1000px){
-    .Head_wrap{
-        width: 480px;
-        height: 280px;
-        text-align: center;
-        align-items: center;
-    }
-
-    .Head_bottom{
-        flex-direction: column;
-    }
-    
-    .Mockup> img{
-        width: 500px;
-        height: 380px;
-        margin-top: 40px;
-    }
-} */
-
-@media screen and (max-width:600px){
-    .Head_wrap{
-        width: 350px;
-        height: 320px;
-        text-align: center;
-        align-items: center;
-    }
-
-    .Head_wrap> h1{
-        /* font-family: 'Poppins', sans-serif; */
-        font-size: 30px;
-    }
-
-    .Head_wrap> p{
-        /* font-family: 'Open Sans', sans-serif; */
-        font-size: 19px;
-    }
-
-    .Head_bottom{
-        flex-direction: column;
-    }
-
-    .Mockup> img{
-        width: 350px;
-        height: 300px;
-        margin-top: 45px;
-    }
-
-    .btn2{
-
-    }
-
-    .Main_one{
-        flex-direction: column-reverse;
-        height: 500px;
-    }
-
-    .Grow_wrap{
-        margin-right: 80px;
-        text-align: center;
-        width: 350px;
-        height: 200px;
-    }
-
-    /* .Grow_wrap> p{
-        font-size: 30px;
-    } */
-
-    .Grow> img{
-        width: 350px;
-        height: 250px;
-        margin-right: 80px;
-    }
-}
-
 .Container_main{
-    background-color: white;
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 }
 
 .Main_one{
-    background-color: rgb(27, 124, 124);
+    background-color: white;
     width: 90%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 60px 40px 60px 120px;
     border-radius: 8px;
-    /* margin-top: 60px; */
-    /* padding-bottom: 70px; */
+    padding: 60px 40px 60px 120px;
+    margin-top: 120px;
+    box-shadow: 0px 0px 10px -5px #555;
 }
 
 .Grow_wrap{
     width: 400px;
     height: 300px;
-    background-color: yellow;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -208,9 +121,296 @@ font-family: 'Poppins', sans-serif; */
     font-size: 14px;
 }
     
-
-
 .Grow> img{
     width: 400px;
     height: 300px;
+}
+
+.Main_two{
+    background-color: white;
+    width: 90%;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 8px;
+    padding: 60px 40px 60px 120px;
+    margin-top: 30px;
+    box-shadow: 0px 0px 10px -5px #555;
+}
+
+.Community{
+    width: 600px;
+    height: 200px;
+    background-color: white;
+    border-radius: 8px;
+    position: relative;
+    top: -22%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 0px 10px -5px #555;
+}
+
+.Community> h1{
+    font-size: 27px;
+    font-family: 'Poppins', sans-serif;
+    color: rgb(27,44,51);
+}
+
+.Community> button{
+    width: 270px;
+    height: 50px;
+    border-radius: 50px;
+    font-size: 16px;
+    font-family: 'Open Sans', sans-serif;
+    color: white;
+    background-color: rgb(254,82,192);
+    margin-top: 25px;
+    border: none;
+    cursor: pointer;
+}
+
+.Main_three{
+    background-color: white;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 8px;
+    padding: 60px 40px 60px 120px;
+    margin-top: 30px;
+    margin-bottom: 180px;
+    box-shadow: 0px 0px 10px -5px #555;
+}
+
+.Container_footer{
+    background-color: rgb(0,37,46);
+    width: 100%;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.Foot_wrap{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+}
+
+.Foot{
+    width: 300px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    color: white;
+}
+
+.Icon{
+    display: flex;
+    align-items: center;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.Icon> p{
+    margin-left: 15px;
+}
+
+.Icon> address{
+    margin-left: 15px;
+    font-size: 13px;
+    line-height: 20px;
+}
+
+.Icon> img{
+    width: 30px;
+    height: 30px;
+}
+
+.Blog{
+    width: 100px;
+    height: 80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-family: 'Open Sans', sans-serif;
+    color: white;
+}
+
+.Social{
+    width: 130px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 50px;
+}
+
+i{
+    background-color: none;
+    border: 1px solid white;
+    border-radius: 50px;
+    width: 35px;
+    height: 35px;
+}
+
+
+i:hover{
+    color: rgb(254,82,192);
+    cursor: pointer;
+    border: 1px solid rgb(254,82,192)
+}
+
+.fa-facebook{
+    font-size: 25px;
+    text-align: center;
+    color: white;
+    padding-top: 5px;
+}
+
+.fa-twitter{
+    font-size: 25px;
+    text-align: center;
+    color: white;
+    padding-top: 5px;
+}
+
+.fa-instagram{
+    font-size: 25px;
+    text-align: center;
+    color: white;
+    padding-top: 5px;
+}
+
+.Copy{
+    margin-top: 30px;
+    display: flex;
+    width: 80%;
+    justify-content: flex-end;
+    font-size: 13px;
+    font-family: 'Open Sans', sans-serif;
+    color: white;
+}
+
+@media screen and (max-width:600px){
+    .btn1{
+        width: 120px;
+        height: 30px;
+        border-radius: 50px;
+    }
+
+    .logo{
+        width: 120px;
+        height: 20px;
+        margin-top: 5px;
+    }
+
+    .Head_wrap{
+        width: 320px;
+        height: 350px;
+        text-align: center;
+        align-items: center;
+    }
+
+    .Head_wrap> h1{
+        font-size: 30px;
+    }
+
+    .Head_wrap> p{
+        font-size: 19px;
+    }
+
+    .Head_bottom{
+        flex-direction: column;
+    }
+
+    .Mockup> img{
+        width: 330px;
+        height: 300px;
+        margin-top: 45px;
+    }
+
+    .Main_one{
+        flex-direction: column-reverse;
+    }
+
+    .Grow_wrap{
+        width: 330px;
+        height: 150px;
+        text-align: center;
+        align-items: center;
+        margin-right: 80px;
+        margin-top: 40px;
+    }
+
+    .Grow_wrap> p{
+        font-size: 18px;
+        margin-top: 20px;
+    }
+
+    .Grow_wrap> h1{
+        font-size: 25px;
+    }
+
+    .Grow> img{
+        width: 330px;
+        height: 250px;
+        margin-right: 80px;
+        
+    }
+
+    .Main_two{
+        flex-direction: column-reverse;
+    }
+
+    .Main_three{
+        flex-direction: column-reverse;
+    }
+
+    .Community{
+        width: 350px;
+        margin-top: 60px;
+        padding: 15px;
+    }
+
+    .Community> h1{
+        font-size: 20px;
+    }
+
+    .Container_footer{
+        height: 800px;
+    }
+
+    .Foot_wrap{
+        flex-direction: column;
+        align-items: flex-start;
+        margin-top: -120px;
+        width: 350px;
+    }
+
+    .Blog{
+        margin-top: 20px;
+        align-content: space-between;
+    }
+
+    .Foot_wrap> .Social{
+        width: 100%;
+        justify-content: center;
+        padding: 10px;
+        margin-top: 30px;
+    }
+
+    .Social> a{
+        margin: 6px;
+    }
+
+
+    .Copy{
+        justify-content: center;
+        margin-top: -35px;
+    }
 }
